--- a/results-summary-component-main/style.css
+++ b/results-summary-component-main/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -6,7 +8,7 @@
     text-decoration: none;
     scroll-behavior: smooth;
     font-size: 18px;
-    font-family: 'Hanken Grotesk';
+    font-family: 'Hanken Grotesk', sans-serif;
     -webkit-tap-highlight-color: transparent;
 }
 
